--- a/vignettes/LymphoSeq2.Rmd
+++ b/vignettes/LymphoSeq2.Rmd
@@ -49,7 +49,7 @@ system.file("extdata", "IGH_sequencing", package = "LymphoSeq2") #For the IGH fi
 library(LymphoSeq2)
 library(tidyverse)
 study_files <- system.file("extdata", "TCRB_sequencing", package = "LymphoSeq2") 
-study_table <- LymphoSeq2::readImmunoSeq(study_files)
+study_table <- LymphoSeq2::readImmunoSeq(path = study_files, threads = 1)
 ```
 
 Looking at the `study_table` we see a tibble with 12 columns and 9334 rows
